--- a/index.html
+++ b/index.html
@@ -468,6 +468,23 @@
             </li>
           </ul>
         </div>
+        <div class="footer-subscribe">
+          <h2 class="footer-header">Subscribe</h2>
+          <form class="footer-input">
+            <input
+              type="email"
+              name="email"
+              placeholder="E-mail"
+              class="footer-input-email"
+            />
+            <button type="submit" class="subscribe-btn">
+              Subscribe
+              <svg width="24" height="24" class="footer-plane-icon">
+                <use href="./images/sprait/sprait.svg#footer-plane-icon"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
     <div class="backdrop is-hidden" data-modal>
@@ -477,6 +494,78 @@
             <use href="./images/sprait/sprait.svg#close-modal"></use>
           </svg>
         </button>
+        <p class="modal-form-title">
+          Leave your contacts and we will call you back
+        </p>
+        <form class="modal-form">
+          <label class="modal-form-field">
+            <span class="modal-form-text">Name*</span>
+            <span class="modal-form-input-wrapper">
+              <input
+                type="text"
+                name="user_mane"
+                class="modal-form-input"
+                required
+                pattern="[a-zA-Zа-яА-ЯІіЇї]+"
+                minlength="2"
+              />
+              <svg class="modal-form-icon">
+                <use href="./images/sprait/sprait.svg#person"></use>
+              </svg>
+            </span>
+          </label>
+          <label class="modal-form-field">
+            <span class="modal-form-text">Phone*</span>
+            <span class="modal-form-input-wrapper">
+              <input
+                type="tel"
+                name="user_phone"
+                class="modal-form-input"
+                required
+                pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
+                title="xxx-xxx-xx-xx"
+              />
+              <svg class="modal-form-icon">
+                <use href="./images/sprait/sprait.svg#phone"></use>
+              </svg>
+            </span>
+          </label>
+          <label class="modal-form-field">
+            <span class="modal-form-text">Email*</span>
+            <span class="modal-form-input-wrapper">
+              <input
+                type="email"
+                name="user_email"
+                class="modal-form-input"
+                required
+              />
+              <svg class="modal-form-icon">
+                <use href="./images/sprait/sprait.svg#email"></use>
+              </svg>
+            </span>
+          </label>
+          <label class="modal-form-field">
+            <span class="modal-form-text">Comment</span>
+            <textarea
+              name="user_message"
+              class="modal-form-texterea"
+              placeholder="Text input"
+            ></textarea>
+          </label>
+          <div class="modal-field">
+            <input
+              id="user-policy"
+              type="checkbox"
+              name="user_policy"
+              class="modal-form-check visually-hidden"
+            />
+            <label for="user-policy" class="modal-form-check-desc">
+              I accept the terms and conditions of the
+              <a href="" class="privacy-link">Privacy Policy</a>
+            </label>
+          </div>
+          <button type="submit" class="modal-form-submit">Send</button>
+        </form>
       </div>
     </div>
     <script src="./js/modal.js"></script>
