--- a/portfolio.html
+++ b/portfolio.html
@@ -322,6 +322,23 @@
             </li>
           </ul>
         </div>
+        <div class="footer-subscribe">
+          <h2 class="footer-header">Subscribe</h2>
+          <form class="footer-input">
+            <input
+              type="email"
+              name="email"
+              placeholder="E-mail"
+              class="footer-input-email"
+            />
+            <button type="submit" class="subscribe-btn">
+              Subscribe
+              <svg width="24" height="24" class="footer-plane-icon">
+                <use href="./images/sprait/sprait.svg#footer-plane-icon"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
   </body>
